fix align of content

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,6 @@
   
   #welcome-section{
     position: relative;
-    scroll-margin-top: 10vh; 
     width: 100%;
     height: 100vh;
     max-width: 100%;
@@ -144,6 +143,7 @@
     max-width: 300px;
     min-width: 200px;
     background-color: none;
+    margin-bottom: 1rem;
 
   }
   
@@ -174,6 +174,7 @@
     text-align: left;
   }
   #welcome-section p{
+    margin-top: 1rem;
     background: none;
     border-radius: 3%;
     padding: 1rem 0rem;
@@ -230,6 +231,7 @@
 
   .icon-wrapper{
     z-index: 1;
+    margin-top: 1rem;
   }
 
   .custom-shape-divider-bottom-1678547515 {
@@ -254,7 +256,6 @@
 }
 
   #about{
-    scroll-margin-top: 10vh;
     width: 100%;
     height: 100vh;
     max-width: 100%;
@@ -262,9 +263,11 @@
   }
   
   #projects{
-    scroll-margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
-    height: auto;
+    min-height: 100vh;
     max-width: 100%;
     background-color: var(--color1);
     padding-top: 1rem;
@@ -287,7 +290,6 @@
       grid-gap: 1rem;
     max-width: 1280px;
     margin: 0 auto;
-    padding-bottom: 3rem;
   }
   
   .project-tile{
@@ -380,9 +382,11 @@
   
   #contact{
     position: relative;
-    scroll-margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: var(--color2);
     z-index: 0;
     overflow: hidden;
@@ -443,7 +447,6 @@
 
 .form-container{
   position: relative;
-  height: 100%;
   max-width: 450px;
   min-width: 200px;
   margin: 0 auto;
@@ -584,6 +587,9 @@ font-size: 2.4em;
     var(--color1) 30%,
     var(--color2) 100%);
   }
+  #contact{
+    padding-bottom: 80px
+  }
 
 }
 
@@ -607,7 +613,7 @@ font-size: 2.4em;
     }
 
     #welcome-section{
-      margin-top: 80px;
+      margin-top: 150px;
     background-image: linear-gradient(
       180deg,
       var(--color1) 30%,
@@ -617,20 +623,12 @@ font-size: 2.4em;
   .footer-wrapper{
     flex-direction: column;
   }
+
 }
 
-@media screen and (max-width:390px) {
+@media screen and (max-width:320px) {
   #welcome-section{
-    padding-top: 140px;
     margin-bottom: 80px
-  }
-
-  #contact{
-    margin-bottom: 60px
-  }
-
-  #contact form{
-    height: 100%
   }
   nav #cv {
     gap: 200px
